<resources>
    <string name="app_name">CubeGame</string>
    <string name="test_content">孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服明灯佛奥佩服孔明灯佛奥佩服孔明灯佛奥佩服</string>
    <string name="test_title">十多个考虑什么打开没地方煤矿</string>
    <string name="missOld">怀旧</string>
    <string name="testDate">1-29</string>
    <string name="testDiscuss">256</string>
    <string name="contentDescription">背景</string>
    <string name="menu_mine_order">我的订单</string>
    <string name="menu_mine_topic">我的话题</string>
    <string name="menu_safe">安全中心</string>
    <string name="menu_setting_changePwd">修改密码</string>
    <string name="menu_setting_changeInfo">修改资料</string>
    <string name="menu_exit">注销登录</string>
    <string name="boon">福利</string>
    <string name="news">资讯</string>
    <string name="gameLib">游戏库</string>
    <string name="community">社区</string>
    <string name="headimg">头像</string>
    <string name="appName">立方体游戏</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="tel">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="pwd">密码</string>
    <string name="register">注册</string>
    <string name="get_verifyCode">获取验证码</string>
    <string name="download">下载</string>
    <string name="gameDescription">游戏图标</string>
    <string name="login">登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="verifyCode_login">验证码登录</string>
    <string name="QQlogin">QQ</string>
    <string name="wechatlogin">微信</string>
    <string name="sinalogin">新浪</string>
    <string name="other_login">第三方登录</string>
    <string name="toVerifyCodeLogin">切换至验证码登录</string>
    <string name="toPwdLogin">切换至密码登录</string>
    <string name="sure">确定</string>
    <string name="show_all">显示全部</string>
    <string name="developer_word">开发者的话</string>
    <string name="complain">投诉</string>
    <string name="gamebc">背景介绍</string>
    <string name="detailed">详细信息</string>
    <string name="downloadNum">下载量:</string>
    <string name="version">版本号:</string>
    <string name="size">大小:</string>
    <string name="updateTime">更新时间:</string>
    <string name="company">开发商:</string>
    <string name="unfollow">未关注</string>
    <string name="report">举报</string>
    <string name="asc">升序</string>
    <string name="desc">降序</string>
    <string name="reply">回复</string>
    <string name="ad">来自广告</string>
    <string name="extend">推广</string>
</resources>
