<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="2dp"
    android:orientation="horizontal">

    <TextView
        android:gravity="center"
        android:textSize="@dimen/contentSize"
        android:id="@+id/other_login_text"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/other_login"
        android:layout_margin="2dp"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/other_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/QQLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableTop="@drawable/qq"
            android:text="@string/QQlogin"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/WeChatLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableTop="@drawable/wechat"
            android:text="@string/wechatlogin"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/SinaLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableTop="@drawable/sina"
            android:text="@string/sinalogin"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
