<?xml version="1.0" encoding="utf-8"?>

<!--首页列表子布局:关注-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <RelativeLayout
        android:id="@+id/item_news_love_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_news_love_iv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/test_horizontal" />

        <android.support.v7.widget.CardView
            android:id="@+id/item_news_love_contentCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_news_love_iv"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-80dp"
            android:background="@color/white"
            android:padding="5dp"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_news_love_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/test_title"
                    android:textSize="@dimen/titleSize" />

                <View
                    android:id="@+id/item_news_love_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/item_news_love_title"
                    android:background="@color/gray_cc" />

                <TextView
                    android:id="@+id/item_news_love_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/item_news_love_line"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:textColor="@color/gray_cc"
                    android:text="@string/test_content"
                    android:textSize="@dimen/contentSize" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/item_news_love_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/item_news_love_contentCardView"
            android:layout_below="@+id/item_news_love_contentCardView"
            android:layout_marginTop="5dp"
            android:text="@string/missOld" />

        <TextView
            android:id="@+id/item_news_love_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_news_love_contentCardView"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/item_news_love_discuss"
            android:drawableStart="@mipmap/time"
            android:gravity="center"
            android:text="@string/testDate" />

        <TextView
            android:id="@+id/item_news_love_discuss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_news_love_time"
            android:layout_alignEnd="@+id/item_news_love_contentCardView"
            android:layout_below="@+id/item_news_love_contentCardView"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@mipmap/discuss"
            android:gravity="center"
            android:text="@string/testDiscuss" />

    </RelativeLayout>

</RelativeLayout>