<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_margin="2dp"
            android:id="@+id/fragment_game_info_developerWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_game_info_developerWords_label"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/rect"
                android:gravity="center"
                android:padding="2dp"

                android:text="@string/developer_word" />

            <TextView
                android:id="@+id/fragment_game_info_developerWords_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_game_info_developerWords_label"
                android:maxLines="10"
                android:padding="5dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/contentSize"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/fragment_game_info_developerWords_showMore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fragment_game_info_developerWords_content"
                android:background="@color/transparent"
                android:drawableEnd="@mipmap/down"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/show_all"
                android:textColor="@color/textColor" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="2dp"
            android:id="@+id/fragment_game_info_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_margin="2dp"
            android:id="@+id/fragment_game_info_gamebc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fragment_game_info_gamebc_label"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/rect"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/gamebc" />

            <TextView
                android:id="@+id/fragment_game_info_gamebc_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_game_info_gamebc_label"
                android:maxLines="10"
                android:padding="5dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/contentSize"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/fragment_game_info_gamebc_showMore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fragment_game_info_gamebc_content"
                android:background="@color/transparent"
                android:drawableEnd="@mipmap/down"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/show_all"
                android:textColor="@color/textColor" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="2dp"
            android:id="@+id/fragment_game_info_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <view
                android:layout_centerHorizontal="true"
                android:id="@+id/fragment_game_info_strut"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_label"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/rect"
                android:gravity="start|center"
                android:padding="2dp"
                android:layout_toStartOf="@id/fragment_game_info_strut"
                android:text="@string/detailed" />
            <Button
                android:id="@+id/fragment_game_info_detailed_complain"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:background="@color/transparent"
                android:padding="2dp"
                android:textColor="@color/textColor"
                android:text="@string/complain" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_downloadNum_label"
                style="@style/GameTextLabel"
                android:text="@string/downloadNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_label" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_downloadNum_content"
                style="@style/GameTextConent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_label"
                 />

            <TextView
                android:id="@+id/fragment_game_info_detailed_version_label"
                style="@style/GameTextLabel"
                android:text="@string/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fragment_game_info_detailed_downloadNum_label" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_version_content"
                style="@style/GameTextConent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_downloadNum_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_size_label"
                style="@style/GameTextLabel"
                android:text="@string/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_version_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_size_content"
                style="@style/GameTextConent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_version_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_updateTime_label"
                style="@style/GameTextLabel"
                android:text="@string/updateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_size_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_updateTime_content"
                style="@style/GameTextConent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_size_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_company_label"
                style="@style/GameTextLabel"
                android:text="@string/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_updateTime_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_company_content"
                style="@style/GameTextConent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_updateTime_content" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="2dp"
            android:id="@+id/fragment_game_info_companyTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>
