<?xml version="1.0" encoding="utf-8"?>

<!--首页列表子布局-->

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/item_news_cardView"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_news_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:padding="5dp"
        android:textSize="@dimen/titleSize"
        android:id="@+id/item_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:maxLines="1"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_toEndOf="@+id/item_news_cardView"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/item_news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/item_news_title"
        android:layout_toEndOf="@+id/item_news_cardView"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/test_content"
        android:textSize="@dimen/contentSize" />

    <TextView
        android:id="@+id/item_news_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/item_news_content"
        android:layout_toEndOf="@+id/item_news_cardView"
        tools:text="@tools:sample/cities" />

    <TextView
        android:id="@+id/item_news_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_news_tag"
        android:layout_alignBottom="@+id/item_news_tag"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/item_news_discuss"
        android:drawableLeft="@mipmap/time"
        tools:text="@string/testDate" />

    <TextView
        android:id="@+id/item_news_discuss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_news_time"
        android:layout_alignBottom="@+id/item_news_time"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@mipmap/discuss"
        android:text="@string/testDiscuss" />
</RelativeLayout>