<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/dividers"
        android:orientation="vertical"
        android:showDividers="end">

        <RelativeLayout
            android:id="@+id/fragment_game_info_developerWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/fragment_game_info_developerWords_label"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/rect"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/developer_word" />

            <TextView
                android:id="@+id/fragment_game_info_developerWords_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_game_info_developerWords_label"
                android:maxLines="10"
                android:padding="5dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/contentSize"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/fragment_game_info_developerWords_showMore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fragment_game_info_developerWords_content"
                android:background="@color/transparent"
                android:drawableEnd="@mipmap/down"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/show_all"
                android:textColor="@color/textColor" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_game_info_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            tools:listitem="@layout/item_game_info_pic" />

        <RelativeLayout
            android:id="@+id/fragment_game_info_gamebc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/fragment_game_info_gamebc_label"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:drawableStart="@drawable/rect"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/gamebc" />

            <TextView
                android:id="@+id/fragment_game_info_gamebc_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_game_info_gamebc_label"
                android:maxLines="10"
                android:padding="5dp"
                android:textColor="@color/gray"
                android:textSize="@dimen/contentSize"
                tools:text="@tools:sample/lorem" />

            <Button
                android:id="@+id/fragment_game_info_gamebc_showMore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fragment_game_info_gamebc_content"
                android:background="@color/transparent"
                android:drawableEnd="@mipmap/down"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/show_all"
                android:textColor="@color/textColor" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragment_game_info_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <View
                android:id="@+id/fragment_game_info_strut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_label"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/fragment_game_info_strut"
                android:drawableStart="@drawable/rect"
                android:gravity="start|center"
                android:padding="2dp"
                android:text="@string/detailed" />

            <Button
                android:id="@+id/fragment_game_info_detailed_complain"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/complain"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_downloadNum_label"
                style="@style/GameTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_label"
                android:text="@string/downloadNum" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_downloadNum_content"
                style="@style/GameTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_label" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_version_label"
                style="@style/GameTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fragment_game_info_detailed_downloadNum_label"
                android:text="@string/version" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_version_content"
                style="@style/GameTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_downloadNum_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_size_label"
                style="@style/GameTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_version_content"
                android:text="@string/size" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_size_content"
                style="@style/GameTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_version_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_updateTime_label"
                style="@style/GameTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_size_content"
                android:text="@string/updateTime" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_updateTime_content"
                style="@style/GameTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_size_content" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_manufacturer_label"
                style="@style/GameTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_updateTime_content"
                android:text="@string/company" />

            <TextView
                android:id="@+id/fragment_game_info_detailed_manufacturer_content"
                style="@style/GameTextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_game_info_detailed_updateTime_content" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_game_info_manufacturerTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            tools:listitem="@layout/item_game_info_theme" />
    </LinearLayout>
</RelativeLayout>
